# src/genres/dto/create-genre.dto.ts
@@ -1,1 +1,6 @@
-export class CreateGenreDto {}
+import { IsString } from "class-validator";
+
+export class CreateGenreDto {
+    @IsString()
+    name: string
+}
