# src/movies_genres/dto/create-movies_genre.dto.ts
@@ -1,0 +1,11 @@
+import { IsNumber } from "class-validator";
+import { Genre } from "src/genres/entities/genre.entity";
+import { Movie } from "src/movies/entities/movie.entity";
+
+export class CreateMoviesGenreDto {
+    @IsNumber()
+    movie: Movie
+
+    @IsNumber()
+    genre: Genre
+}
