# src/movies_genres/dto/update-movies_genre.dto.ts
@@ -1,0 +1,4 @@
+import { PartialType } from '@nestjs/swagger';
+import { CreateMoviesGenreDto } from './create-movies_genre.dto';
+
+export class UpdateMoviesGenreDto extends PartialType(CreateMoviesGenreDto) {}
